--- a/scss_2/_main.scss
+++ b/scss_2/_main.scss
@@ -29,7 +29,7 @@ main {
         height: 1000px;
         position: absolute;
         top: 0px;
-        background: #131313;
+        background: #ededed;
         z-index: -999;
     }
 }
