--- a/scss_2/_fixside.scss
+++ b/scss_2/_fixside.scss
@@ -66,8 +66,8 @@
     .search {
         width: 300px;
         height: 60px;
-        background: linear-gradient(to top,#272727 0%,#434343);
-        border: solid 1px #327e1a;
+        background: #ffffff;
+        box-shadow: 0px 0px 10px 0px #00000017;
         border-radius: 3px 0px 0px 3px;
         position: absolute;
         top: 0px;
@@ -77,7 +77,14 @@
         
         &.open {
             left: -240px;
-            background: #414141;
+            background: #fafafa;
+
+            .searchbut {
+                
+                &:hover,&:active,&.active {
+                    border-color: transparent #f6f6f6 transparent transparent;
+                }
+            }
         }
 
         .searchbut {
@@ -87,12 +94,14 @@
             border-radius: 3px 0px 0px 3px;
             float: left;
             text-align: center;
+            border: solid 1px transparent;
+            background: #ffffff;
 
             &:hover,&:active,&.active {
-                background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
+                border-color: #3366ec;
 
                 span {
-                    color: #131313;
+                    color: #356bf7;
                 }
 
                 .fixsideimg {
@@ -102,13 +111,13 @@
 
             span {
                 font-size: 13px;
-                color: #c8c8c8;
+                color: #454545;
             }
 
             .fixsideimg {
                 width: 30px;
-                height: 30px;
-                background: url('../images/fixside_ic2.png');
+                height: 29px;
+                background: url('../images/fixside_ic3.png');
                 background-size: 500%;
                 float: left;
                 margin: 7px 15px 3px 14px;
@@ -122,18 +131,17 @@
             height: 30px;
             font-size: 16px;
             padding-left: 10px;
-            box-shadow: 0px 3px 10px 2px #1f1f1f inset;
-            border: solid 1px #5d5d5d;
+            border: solid 1px #e3e3e3;
             border-top: none;
             border-radius: 3px;
             float: left;
             margin: 15px 0px 0px 10px;
-            background: linear-gradient(to bottom,#303030 21%,#424242 100%);
-            color: #898787;
+            background: #ffffff;
+            color: #8d8d8d;
 
             &::placeholder {
                 font-weight: bold;
-                color: #898787;
+                color: #8d8d8d;
                 font-size: 14px;
             }
         }
@@ -141,17 +149,17 @@
         button {
             width: 50px;
             height: 28px;
-            background: #2b2b2b;
-            border: solid 1px #34aa0d;
-            color: #42c317;
+            box-shadow: 0px 0px 10px 0px #00000017;
+            background: #ffffff;
+            color: #356bf7;
             float: left;
             border-radius: 5px;
             font-size: 16px;
             margin: 16px 0px 16px 15px;
 
             &:hover,&:active,&.active {
-                color: #2b2b2b;
-                background: #34aa0d;
+                color: #ffffff;
+                background: #356bf7;
             }
         }
 
@@ -160,7 +168,7 @@
             width: 240px;
             height: auto;
             float: left;
-            margin-left: 60px;
+            margin: -2px 0px 0px 62px;
             overflow: hidden;
             border-radius: 0px 0px 0px 3px;
 
@@ -171,10 +179,12 @@
                 padding-left: 20px;
                 position: relative;
                 font-size: 14px;
-                background: linear-gradient(to top, #393939 0%, #555555 100%);
+                background: #ffffff;
                 cursor: pointer;
-                color: #dadada;
-                border-bottom: solid 1px #6c6c6c;
+                box-sizing: border-box;
+                color: #454545;
+                border: solid 1px transparent;
+                border-bottom-color: #c8c8c8;
 
                 &::before {
                     content: "";
@@ -182,7 +192,7 @@
                     height: 0px;
                     position: absolute;
                     border-style: solid;
-                    border-color: #b2b2b2 transparent;
+                    border-color: #8d8d8d transparent;
                     border-width: 10px 8px 0px 8px;
                     right: 40px;
                     top: 21px;
@@ -191,8 +201,7 @@
                 }
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to bottom, #2d2d2d 0%, #393939 100%);
-                    color: #dadada;
+                    border-color: #356bf7;
 
                     &::before {
                         transform: rotate(0deg);
@@ -201,7 +210,7 @@
             }
 
             div {
-                background: #2c2c2c;
+                background: #f5f5f5;
                 width: 100%;
                 height: 0px;
                 overflow: hidden;
@@ -215,13 +224,13 @@
                     width: 100%;
                     height: 50px;
                     line-height: 50px;
-                    color: #b9b9b9;
-                    border-bottom: solid 1px #8c8c8c;
+                    color: #595959;
+                    border-bottom: solid 1px #c8c8c8;
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        background: #212121;
-                        color: #53ca2a;
+                        background: #356bf7;
+                        color: #ffffff;
                     }
 
                     .team {
@@ -259,57 +268,23 @@
         position: relative;
         transition: all 0.3s;
 
-        //漢堡選單
-        .hamBtn {
-            display: none;
-            width: 30px;
-            height: 30px;
-            position: absolute;
-            top: 0px;
-            left: -30px;
-            border-radius: 3px 0px 0px 3px;
-            background: #eaedf4;
-            padding: 0px;
-            cursor: pointer;
-            &:hover,&:active,&.active {
-                background: linear-gradient(to right, #7f8cd1 0%, #1a2b84 100%);
-                span {
-                    background: #fff;
-                }
-            }
-
-            span {
-                display: block;
-                width: 55%;
-                height: 4px;
-                background: #f3b378;
-                margin:0px 0px 0px 7px;
-                border-radius: 5px;
-                &:first-child {
-                    margin: 6px 0px 3px 7px;
-                }
-                &:last-child {
-                    margin-top: 3px;
-                }
-            }
-        }
-
         a {
             display: block;
             width: 100%;
             height: 62px;
-            background: linear-gradient(to top,#272727 0%,#434343 100%);
+            background: #ffffff;
             border-radius: 3px 0px 0px 3px;
             text-align: center;
             margin-top: 3px;
-            border: solid 1px #327e1a;
+            border: solid 1px transparent;
             cursor: pointer;
+            box-shadow: 0px 0px 10px 0px #00000017;
 
             &:hover,&:active,&.active {
-                background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
+                border-color: #356bf7;
 
                 span {
-                    color: #131313;
+                    color: #356bf7;
                 }
 
                 .fixsideimg {
@@ -319,13 +294,13 @@
 
             span {
                 font-size: 13px;
-                color: #d0d0d0;
+                color: #454545;
             }
 
             .fixsideimg {
                 width: 30px;
                 height: 30px;
-                background: url('../images/fixside_ic2.png');
+                background: url('../images/fixside_ic3.png') no-repeat;
                 background-size: 500%;
                 float: left;
                 margin: 8px 15px 3px 17px;
