--- a/scss_2/_header.scss
+++ b/scss_2/_header.scss
@@ -162,7 +162,7 @@ header {
                     font-size: 14px;
                     padding-left: 5px;
                     border-radius: 3px;
-                    border: solid 1px #24349f;
+                    border: solid 1px #356bf7;
                     background: #ffffff;
                     color: #000000;
 
@@ -300,7 +300,7 @@ header {
                     color: #595959;
                     
                     span {
-                        color: #24349f;
+                        color: #356bf7;
                     }
                 }
 
@@ -344,7 +344,7 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: #8d8d8d transparent;
+                    border-color: #ffffff transparent;
                     top: 7px;
                     right:10px;
                 }
@@ -353,11 +353,11 @@ header {
                     width: 110px;
                     padding: 3px 0px 3px 5px;
                     background: transparent;
-                    border: solid 1px #e3e3e3;
+                    background: #356bf7;
+                    border: solid 1px #ffffff;
                     border-radius: 3px;
-                    color: #595959;
+                    color: #ffffff;
                     font-size: 12px;
-                    background: #ffffff;
                     appearance:none;   
                     -moz-appearance:none;   
                     -webkit-appearance:none;
