--- a/scss_2/_rightside.scss
+++ b/scss_2/_rightside.scss
@@ -17,12 +17,12 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: #ffc651;
+        background: #ffffff;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #ffffff;
+        background: #ffc651;
         border-radius: 10px;
     }
     
@@ -30,12 +30,11 @@
     .statusWindow {
         width: 100%;
         height: 113px;
-        background: #ffffff;
+        background: #f5f5f5;
         position: relative;
         
         p {
             background: #ffffff;
-            border-bottom: solid 1px #f6f6f6;
             color: #454545;
             padding: 7px 15px;
             font-size: 12px;
@@ -46,16 +45,15 @@
             width: 95%;
             height: auto;
             left: 50%;
-            bottom: 1%;
+            bottom: 4%;
             transform: translateX(-50%);
 
             li {
                 padding: 5px 15px 3px;
                 font-size: 14px;
-                border: solid 1px #494949;
                 position: relative;
-                background: #393939;
-                color: #cbcbcb;
+                background: #ffffff;
+                color: #454545;
                 margin-bottom: 3px;
 
                 &::before {
@@ -65,17 +63,17 @@
                     height: calc(100% + 2px);
                     left: -1px;
                     top: -1px;
-                    background: #30a009;
+                    background: #356bf7;
                 }
 
                 span {
                     float: right;
                     font-size: 12px;
                     padding-top: 2px;
-                    color: #37bb18;
+                    color: #356bf7;
 
                     &.onWait {
-                        color: #c7c7c7;
+                        color: #454545;
                     }
 
                     &.fail {
@@ -88,7 +86,7 @@
                     width: 15px;
                     height: 15px;
                     background: transparent;
-                    border: solid 1px #a0a0a0;
+                    border: solid 1px #8d8d8d;
                     border-radius: 15px;
                     margin-left: 15px;
                     position: relative;
@@ -99,7 +97,7 @@
                         position: absolute;
                         width: 1px;
                         height: 7px;
-                        background: #a0a0a0;
+                        background: #8d8d8d;
                         transform: rotate(45deg);
                         top: 3px;
                         right: 6px;
@@ -110,7 +108,7 @@
                         position: absolute;
                         width: 1px;
                         height: 7px;
-                        background: #a0a0a0;
+                        background: #8d8d8d;
                         transform: rotate(-45deg);
                         top: 3px;
                         left: 6px;
@@ -198,10 +196,12 @@
             background-size: cover;
         }
     }
+
     //下大框
     .room {
         width: 100%;
         height: auto;
+        margin-top: 5px;
 
         //切換按鈕
         .twobut {
@@ -219,22 +219,22 @@
             button {
                 width: 49.5%;
                 height: 100%;
-                background: #3e3e3e;
-                color: #ababab;
+                background: #e6e6e6;
+                color: #595959;
                 font-size: 14px;
                 float: left;
                 margin-right: 1%;
                 border-radius: 3px 3px 0px 0px;
-                border: solid 1px #686868;
-                border-bottom: none;
+                border: solid 1px transparent;
 
                 &:last-child {
                     margin: 0px;
                 }
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to top,#262626 0%,#3c3c3c 100%);
-                    color: #49dd16;
+                    background: #ffffff;
+                    border: solid 1px #356bf7;
+                    color: #356bf7;
                 }
             }
         }
@@ -245,15 +245,15 @@
             button {
                 width: 100%;
                 height: 100%;
-                background: #ffffff;
+                background: #e6e6e6;
                 color: #595959;
                 font-size: 14px;
                 border-radius: 3px 3px 0px 0px;
-                border-bottom: solid 1px #686868;
+                border: solid 1px transparent;
 
                 &:hover,&:active,&.active {
                     background: #ffffff;
-                    color: #595959;
+                    color: #454545;
                 }
             }
         }
@@ -293,8 +293,7 @@
                 li {
                     width: 100%;
                     height: 30px;
-                    line-height: 30px;
-                    border: solid 1px transparent;
+                    line-height: 32px;
                     box-sizing: border-box;
                     position: relative;
                     overflow: hidden;
@@ -302,21 +301,25 @@
                     background: #ffffff;
 
                     &:hover,&:active {
-                        border-color: #356bf7;
 
                         &::before {
                             transform: rotate(90deg);
                             border-color: transparent #356bf7; 
                         }
 
-                        .gameName,.games {
-                            color: #24349f;
+                        .gameName {
+                            border-color: #356bf7;
+                            color: #356bf7;
+                        }
+
+                        .games {
+                            color: #356bf7;
                         }
                     }
 
                     &.active {
+                        background: #f7f7f7;
                         height: auto;
-                        border-color: #356bf7;
                         position: sticky;
                         top: 0px;
                         z-index: 2;
@@ -326,8 +329,14 @@
                             border-color: transparent #356bf7;
                         }
 
-                        .gameName,.games {
-                            color: #24349f;
+                        .gameName {
+                            border-color: #356bf7;
+                            color: #356bf7;
+                            background: #ffffff;
+                        }
+
+                        .games {
+                            color: #356bf7;
                         }
                     }
 
@@ -345,29 +354,37 @@
                     }
 
                     .gameName {
+                        display: block;
+                        width: 100%;
+                        height: 30px;
                         color: #454545;
                         font-size: 13px;
-                        margin-left: 30px;
+                        box-sizing: border-box;
+                        padding-left: 25px;
+                        border: solid 1px transparent;
                     }
 
                     .games {
-                        float: right;
                         font-size: 13px;
                         font-weight: bold;
                         color: #454545;
-                        margin: 2px 60px 0px 0px;
+                        position: absolute;
+                        right: 60px;
+                        top: 0px;
                     }
 
                     .innerList {
-                        width: 100%;
+                        width: 96%;
                         height: 70px;
-                        background: #fafafa;
+                        background: #ffffff;
                         position: relative;
                         cursor: default;
-                        border-top: solid 1px #eeeeee;
-                        
+                        border-radius: 5px;
+                        box-shadow: 0px 0px 5px 0px #00000049;
+                        margin: 0px auto 10px;
+
                         &:nth-of-type(1) {
-                            border-color: #356bf7;
+                            margin-top: 10px;
                         }
 
                         p {
@@ -388,20 +405,22 @@
                                     font-weight: normal;
                                     float: right;
                                     margin-right: 20px;
+                                    color: #8d8d8d;
 
                                     &.onLive {
                                         position: relative;
-                                        color: #57ed22;
+                                        color: #ffffff;
+                                        margin: -7px 15px 0px 0px;
                                         
-                                        &::before {
+                                        &::after {
                                             content: "";
                                             position: absolute;
-                                            width: 6px;
-                                            height: 6px;
-                                            border-radius: 12px;
-                                            top: 6px;
-                                            left: -12px;
-                                            background: #57ed22;
+                                            width: 40px;
+                                            height: 19px;
+                                            top: -1px;
+                                            left: -10px;
+                                            background: url('../images/liveBg.png') no-repeat;
+                                            z-index: -1;
                                         }
                                     }
                                 }
@@ -413,15 +432,14 @@
                                 bottom: 0px;
                                 width: 70px;
                                 height: 30px;
-                                background: #252525;
+                                background: #ffffff;
                                 border-radius: 3px;
-                                border: solid 1px #317f0f;
-                                color: #aeaeae;
+                                box-shadow: 1px 2px 10px 0px #00000049;
+                                color: #356bf7;
 
                                 &:hover,&:active,&.active {
-                                    background: linear-gradient(to right,#92e820 0%,#46dd16 90%);
-                                    border-color: #aef156;
-                                    color: #252525;
+                                    background: #356bf7;
+                                    color: #ffffff;
                                 }
                             }
                         }
@@ -438,7 +456,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #505050;
+            background: #f7f7f7;
 
             &::-webkit-scrollbar {
                 width: 5px;
@@ -446,12 +464,12 @@
             }
         
             &::-webkit-scrollbar-track {
-                background: #121212;
+                background: #ffffff;
                 border-radius: 10px;
             }
         
             &::-webkit-scrollbar-thumb {
-                background: #606360;
+                background: #ffc651;
                 border-radius: 10px;
             }
 
