--- a/scss_2/_table.scss
+++ b/scss_2/_table.scss
@@ -2068,7 +2068,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
-			background: #00000096;
+			background: #c7c7c796;
 		}
 
 		tr {
@@ -2088,29 +2088,28 @@
 			width: 50%;
 			height: auto;
 			padding: 7px;
-			color: #ababab;
+			color: #595959;
 			border-style: solid;
 			border-width: 0px 0px 1px 0px;
-			border-color: #505050;
+			border-color: #f7f7f7;
 			vertical-align: middle;
-			background: #353535;
-			box-shadow: 0px -1px 0px 0px #505050 inset;
+			background: #ffffff;
 			font-size: 12px;
 
 			&.waiting {
-				color: #37bb18;
+				color: #356bf7;
 			}
 
 			&.listName {
 				padding: 15px 7px;
 
 				.vs {
-					color: #37bb18;
+					color: #ffab00;
 					margin: 0px 5px;
 				}
 
 				.odds {
-					color: #e82f2f;
+					color: #356bf7;
 					margin-left: 5px;
 				}
 			}
@@ -2133,9 +2132,10 @@
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%,-50%);
-				border: solid 1px #8c8c8c;
+				border: solid 1px #c1c1c1;
 				text-align: center;
 				padding: 10px 0px;
+				color: #454545;
 			}
 		}
 	}
