--- a/scss_2/_type.scss
+++ b/scss_2/_type.scss
@@ -186,7 +186,7 @@
         }
 
         i {
-            color: #dddddd;
+            color: #356bf7;
             font-size: 18px;
             margin: 0px 6px 0px 12px;
             transform: translateY(2px);
@@ -197,13 +197,13 @@
             height: 18px;
             margin: 0px 6px 0px 12px;
             transform: translateY(4px);
-            fill: #dddddd;
+            fill: #356bf7;
         }
 
         //遊戲標題
         .gameName {
             display: inline-block;
-            color: #fefefe;
+            color: #356bf7;
             font-size: 13px;
         }
 
@@ -222,26 +222,26 @@
                 height: 0px;
                 border-style: solid;
                 border-width: 8px 6px 0px 6px;
-                border-color: #fff transparent;
+                border-color: #8d8d8d transparent;
                 right: 10px;
                 top: 22px;
                 pointer-events: none;
             }
 
             select {
-                background: #2b2b2b;
-                color: #dddddd;
+                background: #ffffff;
+                color: #595959;
                 appearance:none;   
                 -moz-appearance:none;   
                 -webkit-appearance:none;
                 padding: 5px 30px 4px 5px;
-                border: solid 1px #707070;
+                border: solid 1px #e3e3e3;
                 font-size: 12px;
             }
 
             .clock {
                 position: absolute;
-                background: #2b2b2b;
+                background: #595959;
                 top: 50%;
                 right: -36px;
                 width: 30px;
@@ -250,7 +250,7 @@
                 line-height: 24px;
                 text-align: center;
                 border-radius: 3px;
-                color: #37bb18;
+                color: #ffffff;
             }
 
             .reBtn {
@@ -260,10 +260,10 @@
                 transform: translateY(-50%);
                 width: 28px;
                 height: 28px;
-                border: solid 1px #848484;
+                border: solid 1px #595959;
                 border-radius: 20px;
                 cursor: pointer;
-                background: #313131;
+                background: #ededed;
 
                 i {
                     font-size: 14px;
@@ -272,14 +272,15 @@
                     top: 50%;
                     transform: translate(-50%,-50%);
                     margin: 0px;
-                    color: #c9c9c9;
+                    color: #595959;
                 }
 
                 &:hover,&:active,&.active {
-                    background: #fff;
+                    background: #356bf7;
+                    border-color: #356bf7;
 
                     i {
-                        color: #000;
+                        color: #ffffff;
                     }
                 }
             }
@@ -363,9 +364,9 @@
             .date {
                 display: inline-block;
                 margin: 0px 10px;
-                color: #454545;
+                color: #595959;
                 cursor: pointer;
-                position: relative; 
+                position: relative;
 
                 .total {
                     display: inline-block;
@@ -374,7 +375,7 @@
                     margin-left: 10px;
                     line-height: 22px;
                     width: 36px;
-                    text-align: center; 
+                    text-align: center;
 
                     span {
                         color: #ffffff;
@@ -401,7 +402,7 @@
                     background: #ffffff;
                     line-height: 30px;
                     border-radius: 0px 0px 3px 3px;
-                    box-shadow: 1px 2px 5px #000000d7;
+                    box-shadow: 0px 0px 5px 0px #00000017;
 
                     &.display {
                         display: block;
@@ -412,17 +413,13 @@
                         font-size: 14px;
                         color: #595959;
 
-                        &:last-child {
-                            border: none;
-                        }
-
                         &:hover,&:active,&.active {
                             background: #356bf7;
                             color: #ffffff;
 
                             .total {
-                                background: #fcfcfc;
-                                
+                                background: #ffffff;
+
                                 span {
                                     color: #454545;
                                 }
@@ -682,7 +679,7 @@
 .filter {
     display: none;
     background: rgba(0,0,0,.8);
-    width: 1920px;
+    width: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
